--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<header>
 		<img id="img1" src="images/potted-plant.png" alt="icon of a plant">
 		<h2>Plants</h2>
-		<h3>Air Purifying Indoor Plants</h3>
+		<h3>Air Purifyin Indoor Plants</h3>
 	</header>
 
 	<nav id="nav_menu">
